# tvm_learnning

./: .gitignore  CMakeLists.txt  README.md  requirments.txt
convert/: convert_internvit_demo.py  convert_pytorch_demo.py  internvit_hyper_params.json
inference/: CMakeLists.txt  inference.cpp  inference_internvit_demo.py  inference_pytorch_demo.py
script/: build_cross_android_arm.sh  build_local.sh  convert_intervit_to_andorid_cpu.sh  convert_intervit_to_andorid_opencl.sh  convert_intervit_to_android_opencl.sh  convert_intervit_to_linux_cpu.sh  convert_intervit_to_linux_cuda.sh  convert_intervit_to_linux_opencl.sh  convert_pytorch_to_andorid_opencl.sh  convert_pytorch_to_android_cpu.sh  convert_pytorch_to_linux_cpu.sh  convert_pytorch_to_linux_cuda.sh  convert_pytorch_to_linux_opencl.sh  inference_intervit_linux_cpu.sh  inference_pytorch_linux_cpu.sh  inference_pytorch_linux_cuda.sh  inference_pytorch_linux_opencl.sh  run_inference_in_andorid.sh
tvm_common/: __init__.py  common.py  pipeline.py  tvm_convert.py  utils.py
tvm_common/include/: tvm_model.h
tvm_common/src/: tvm_model.cpp
